--- a/references.html
+++ b/references.html
@@ -4,10 +4,10 @@
 		<title>Q ⟩ References</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
-		<meta name="description"          content="Q.js is quantum computing in your browser.">
+		<meta name="description"          content="Quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
 		<meta name="keywords"             content="
-			Q, Q.js, Qjs,
+			Q, Q.js, Q-js, Qjs, quantum JavaScript,
 			quantum, quantum physics, quantum mechanics, superposition,
 			quantum computer, quantum computer programming, quantum computing, QC, 
 			quantum simulator, quantum computer simulator, 
@@ -16,45 +16,45 @@
 			Chrome, Firefox, Safari, Opera, Brave, Edge, WebKit, Blink,
 			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
 			Moar, Moar Technologies Corp, MTC,
-			Google, IBM, Microsoft, NASA, DWave, D-Wave,
+			Google, IBM, Microsoft, Amazon, NASA, DWave, D-Wave,
 			Quil, OpenQASM,
 				ProjectQ, Qiskit, 
 				Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
 				QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
 			Stanford CS 269 Q: Quantum Computer Programming">
 		
-		<meta name="twitter:card"         content="summary">
+		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ References">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ References">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta property="og:image"         content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		<meta property="og:url"           content="https://stewdio.github.io/q.js/references.html">
 		
-		<link rel="canonical"             href="https://stewdio.github.io/q.js/references.html">
-		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
-		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
-		<link rel="stylesheet" type="text/css" href="Assets/style.css">
+		<link rel="canonical" href="https://stewdio.github.io/q.js/references.html">
 		
-		<script async src="https://www.googletagmanager.com/gtag/js"></script>
-		<script src="Assets/ga.js"></script>
-		<script src="Q/Q.js"></script>
-		<script src="Q/ComplexNumber.js"></script>
-		<script src="Q/Matrix.js"></script>
-		<script src="Q/Qubit.js"></script>
-		<script src="Q/Gate.js"></script>
-		<script src="Q/Circuit.js"></script>
-		<script src="Assets/navigation.js"></script>
-		<script src="Assets/Three/three.105.min.js"></script>
-		<script src="Assets/Three/OrbitControls.js"></script>
-		<script src="Assets/Tween/tween.min.js"></script>
-		<script src="Assets/blochSphere.js"></script>
-		<script src="Assets/SurfaceText.js"></script>
+		<script src="https://www.googletagmanager.com/gtag/js" async></script>
+		<link  href="other/q-favicon-064.png" rel="icon" type="image/png">
+		<link  href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<script src="other/ga.js"></script>
+		<link  href="other/style.css" rel="stylesheet" type="text/css">
+		
+		<script src="source/Q.js"></script>
+		<script src="source/Q.ComplexNumber.js"></script>
+		<script src="source/Q.Matrix.js"></script>
+		<script src="source/Q.Qubit.js"></script>
+		<script src="source/Q.Gate.js"></script>
+		<script src="source/Q.Circuit.js"></script>
+		<script src="source/Q.Circuit.Editor.js"></script>
+		<link  href="source/Q.Circuit.Editor.css" rel="stylesheet" type="text/css">
+
+		<script src="other/navigation.js"></script>
+		
 	</head>
 	<body>
 		<main>
@@ -73,7 +73,7 @@
 
 
 			<h4>Dr. Talia Gershon explains quantum computing for WIRED (2018)</h4>
-			<img src="Assets/References/talia-gershon.jpg">
+			<img src="other/references/talia-gershon.jpg">
 			<p>
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
@@ -98,7 +98,7 @@
 				Zach Weinersmith’s
 				“The Talk” (2016)
 			</h4>
-			<img src="Assets/References/the-talk.jpg">
+			<img src="other/references/the-talk.jpg">
 			<p>
 				<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
 				<br>
@@ -130,7 +130,7 @@
 				“Quantum computing for computer scientists”
 				lecture for Microsoft Research (2018)
 			</h4>
-			<img src="Assets/References/andrew-helwer.jpg">
+			<img src="other/references/andrew-helwer.jpg">
 			<p>
 				<a class="call-out" href="https://youtu.be/F_Riqjdh2oM" target="_blank">https://youtu.be/F_Riqjdh2oM</a>
 				<br>
@@ -155,7 +155,7 @@
 				Mirco Mannucci’s
 				“Quantum Computing for Computer Scientists” (2008)
 			</h4>
-			<img src="Assets/References/quantum-computing-for-computer-scientists.jpg">
+			<img src="other/references/quantum-computing-for-computer-scientists.jpg">
 			<p>
 				<!--
 				<a class="call-out" target="https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf" target="_blank">https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf</a> (This linked PDF includes the table of contents and preface only.)
@@ -180,7 +180,7 @@
 				Isaac Chuang’s
 				“Quantum computation and quantum information” (2000, 2010)
 			</h4>
-			<img src="Assets/References/quantum-computing-and-quantum-information.jpg">
+			<img src="other/references/quantum-computing-and-quantum-information.jpg">
 			<p>
 				<a class="call-out" href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
 				<br>
