--- a/Qubit.html
+++ b/Qubit.html
@@ -4,10 +4,10 @@
 		<title>Q ⟩ Qubit</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
-		<meta name="description"          content="Q.js is quantum computing in your browser.">
+		<meta name="description"          content="Quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
 		<meta name="keywords"             content="
-			Q, Q.js, Qjs,
+			Q, Q.js, Q-js, Qjs, quantum JavaScript,
 			quantum, quantum physics, quantum mechanics, superposition,
 			quantum computer, quantum computer programming, quantum computing, QC, 
 			quantum simulator, quantum computer simulator, 
@@ -16,45 +16,50 @@
 			Chrome, Firefox, Safari, Opera, Brave, Edge, WebKit, Blink,
 			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
 			Moar, Moar Technologies Corp, MTC,
-			Google, IBM, Microsoft, NASA, DWave, D-Wave,
+			Google, IBM, Microsoft, Amazon, NASA, DWave, D-Wave,
 			Quil, OpenQASM,
 				ProjectQ, Qiskit, 
 				Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
 				QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
 			Stanford CS 269 Q: Quantum Computer Programming">
 		
-		<meta name="twitter:card"         content="summary">
+		<meta name="twitter:card"         content="summary_large_image">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ Qubit">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ Qubit">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
+		<meta property="og:image"         content="https://stewdio.github.io/q.js/other/q-thumbnail.png">
 		<meta property="og:url"           content="https://stewdio.github.io/q.js/Qubit.html">
 		
-		<link rel="canonical"             href="https://stewdio.github.io/q.js/Qubit.html">
-		<link rel="icon" type="image/png" href="Assets/q-favicon-064.png">
-		<link rel="apple-touch-icon"      href="Assets/q-favicon-144.png">
-		<link rel="stylesheet" type="text/css" href="Assets/style.css">
+		<link rel="canonical" href="https://stewdio.github.io/q.js/Qubit.html">
 		
-		<script async src="https://www.googletagmanager.com/gtag/js"></script>
-		<script src="Assets/ga.js"></script>
-		<script src="Q/Q.js"></script>
-		<script src="Q/ComplexNumber.js"></script>
-		<script src="Q/Matrix.js"></script>
-		<script src="Q/Qubit.js"></script>
-		<script src="Q/Gate.js"></script>
-		<script src="Q/Circuit.js"></script>
-		<script src="Assets/navigation.js"></script>
-		<script src="Assets/Three/three.105.min.js"></script>
-		<script src="Assets/Three/OrbitControls.js"></script>
-		<script src="Assets/Tween/tween.min.js"></script>
-		<script src="Assets/blochSphere.js"></script>
-		<script src="Assets/SurfaceText.js"></script>
+		<script src="https://www.googletagmanager.com/gtag/js" async></script>
+		<link  href="other/q-favicon-064.png" rel="icon" type="image/png">
+		<link  href="other/q-favicon-144.png" rel="apple-touch-icon">
+		<script src="other/ga.js"></script>
+		<link  href="other/style.css" rel="stylesheet" type="text/css">
+		
+		<script src="source/Q.js"></script>
+		<script src="source/Q.ComplexNumber.js"></script>
+		<script src="source/Q.Matrix.js"></script>
+		<script src="source/Q.Qubit.js"></script>
+		<script src="source/Q.Gate.js"></script>
+		<script src="source/Q.Circuit.js"></script>
+		<script src="source/Q.Circuit.Editor.js"></script>
+		<link  href="source/Q.Circuit.Editor.css" rel="stylesheet" type="text/css">
+
+		<script src="other/navigation.js"></script>
+		<script src="other/Three/three.105.min.js"></script>
+		<script src="other/Three/OrbitControls.js"></script>
+		<script src="other/Tween/tween.min.js"></script>
+		<script src="other/blochSphere.js"></script>
+		<script src="other/SurfaceText.js"></script>
+			
 	</head>
 	<body>
 		<main>
@@ -999,7 +1004,7 @@ var fox = new <a href="Q.html">Q</a>.Qubit( 1, 0 )
 			<footer>
 				<p>
 					Source:
-					<a href="https://github.com/stewdio/q.js/blob/master/Q/Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/Q/Qubit.js</a>
+					<a href="https://github.com/stewdio/q.js/blob/master/source/Q.Qubit.js?ts=4" target="_blank">https://github.com/stewdio/q.js/blob/master/source/Q.Qubit.js</a>
 				</p>
 			</footer>
 		</main>
