--- a/Qubit.html
+++ b/Qubit.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
 		<meta name="description"          content="Quantum computing in your browser.">
-		<meta name="copyright"            content="Stewart Smith 2019">
+		<meta name="copyright"            content="Stewart Smith 2019–2020">
 		<meta name="keywords"             content="
 			Q, Q.js, Q-js, Qjs, quantum JavaScript,
 			quantum, quantum physics, quantum mechanics, superposition,
@@ -82,7 +82,7 @@
 				by storing them in a very small matrix
 				that is 1 unit wide
 				and 2 units tall.
-				(See <code><a href="Q.html">Q</a>.<a href="Matrix.html">Matrix</a></code> for a refresher on what a matrx is.)
+				(See <code><a href="Q.html">Q</a>.<a href="Matrix.html">Matrix</a></code> for a refresher on what a matrix is.)
 				So when you think of a qubit you can imagine it as 
 				a 1 × 2 <a href="Matrix.html">matrix</a>
 				containing its 
